--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
+    "multer": "^1.4.4",
     "ops": "^0.0.1",
     "validator": "^13.7.0"
   },
@@ -20,6 +22,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.15"
   }
 }
